# Bantu-Os

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  SPEC.md  demo.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: ci.yml
bantu_os/: __init__.py  __main__.py
bantu_os/agents/: __init__.py  agent_manager.py  base_agent.py  scheduling_agent.py  task_manager.py  tool_executor.py
bantu_os/ai/: __init__.py  agent.py  engine.py  service.py
bantu_os/api/: __init__.py  api_key_store.py  rate_limiter.py  server.py
bantu_os/auth/: __init__.py  password.py  service.py  user_store.py
bantu_os/cli/: server.py
bantu_os/config/: __init__.py  settings.json  settings.py  settings_manager.py
bantu_os/core/: __init__.py  init_bridge.py  scheduler.py  service_manager.py  session_manager.py  socket_server.py
bantu_os/docs/: TOOL_INTERFACE.md
bantu_os/init/: Makefile  init.c
bantu_os/interface/: __init__.py  app_context.py
bantu_os/memory/: __init__.py  chroma_store.py  knowledge_graph.py  memory.py  vector_db.py  vector_store.py
bantu_os/security/: __init__.py  basic_secrets.py
bantu_os/services/: __init__.py  bantu_admin.py  file_service.py  network_service.py  process_service.py  sandboxed_file_service.py  scheduler_service.py  service_base.py  service_manager.py  supervisor.py
bantu_os_data/chromadb/: chroma.sqlite3
boot/: build-initramfs.sh
docs/: ARCHITECTURE.md  END_TO_END_DEMO.md  INDEX.md  INIT.md  KERNEL.md  SECURITY.md  SHELL.md  SPEC.md  index.md
docs/phase2/: ARCHITECTURE.md
init/: Makefile  bantu-init  bantu_init  init.c  services.c  services.h  syscall.c  syscall.h
init/core/: errors.c  errors.h
init/drivers/: driver.c  driver.h
init/ipc/: ipc.c  ipc.h
init/tests/: Makefile  test_services  test_services.c
initramfs/: README.md  build.sh
initramfs/overlay/: init
kernel/: build.sh  config
scripts/: dev-setup.sh
security/: __init__.py  privilege.py  sanitizer.py  secrets.py
security/tests/: test_sanitizer.py
shell/: Cargo.toml  Makefile
shell/src/: lib.rs  main.rs  parser.rs  tools.rs
shell/src/tests/: integration_tests.rs
tests/: conftest.py  test_e2e_full.py  test_e2e_shell_kernel.py  test_engine.py
tests/agent/: test_agent_manager.py
tests/auth/: test_auth.py
tests/core/: test_init_bridge.py  test_service_manager.py  test_session_manager.py
tests/integration/: __init__.py  conftest.py  test_init.py  test_shell.py
tests/kernel/: conftest.py  test_agentic_loop.py  test_async_tool_pipeline.py  test_kernel.py  test_kernel_integration.py  test_socket_server.py
tests/memory/: test_chroma_integration.py
tests/services/: test_iot_service.py  (+4 more)
(+65 files in other folders)
